// Vitest Snapshot v1

exports[`Common > Interface extends interface > No reference > index.ts (clean all) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Interface extends interface > No reference > index.ts (clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Common > Interface extends interface > No reference > index.ts (clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Interface extends interface > No reference > index.ts (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    baz: boolean;

    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Common > Interface without reference > Default > index.ts (clean all) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Interface without reference > Default > index.ts (clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Common > Interface without reference > Default > index.ts (clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Interface without reference > Default > index.ts (default) 1`] = `
"<script lang=\\"ts\\" setup>
interface Props {
    foo: string;
    bar: number;
}



defineProps<Props>()

</script>
"
`;

exports[`Common > Redeclaration of types > Default > index.ts (clean all) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Redeclaration of types > Default > index.ts (clean interface) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}



defineProps<Props>()

</script>
"
`;

exports[`Common > Redeclaration of types > Default > index.ts (clean newline) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}
defineProps<Props>()
</script>
"
`;

exports[`Common > Redeclaration of types > Default > index.ts (default) 1`] = `
"<script lang=\\"ts\\" setup>
type Foo = [number, number]
interface Props {
    foo: Foo
    bar: Foo
}



defineProps<Props>()

</script>
"
`;
